fixes (intro blogpost centered & alignment teaser work)

--- a/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/partials/_work.scss
+++ b/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/partials/_work.scss
@@ -69,6 +69,9 @@
     padding-top: 3rem;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 
     p {
       transition: $transition-standard;
